# codewars

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  setup.sh
scripts/: even_or_odd.cpp  run.cpp
src/001_square_n_sum/: README.md  square_n_sum.cpp
src/002_multiply/: multiply.h
src/003_reversed_strings/: README.md  reversed_strings.cpp
src/004_even_or_odd/: README.md  even_or_odd.cpp  even_or_odd.h
src/005_convert_string_to_number/: README.md  convert_string_to_number.cpp  convert_string_to_number.h
src/006_count_by_x/: README.md  count_by_x.cpp  count_by_x.h
src/007_basic_math_ops/: basic_math_ops.cpp  basic_math_ops.h
src/008_string_repeat/: README.md  string_repeat.cpp  string_repeat.h
src/009_beginner_series_2_clock/: README.md  beginner_series_2_clock.cpp  beginner_series_2_clock.h
src/010_l1_set_alarm/: README.md  l1_set_alarm.cpp  l1_set_alarm.h
src/011_reverse_words/: README.md  reverse_words.cpp  reverse_words.h
src/012_roman_numerals_decoder/: README.md  roman_numerals_decoder.cpp  roman_numerals_decoder.h
src/reversed_strings/: reversed_strings.cpp  reversed_strings.h
src/square_n_sum/: square_n_sum.cpp  square_n_sum.h
tests/: main.cpp  test_basic_math_ops.cpp  test_beginner_series_2_clock.cpp  test_convert_string_to_number.cpp  test_count_by_x.cpp  test_even_or_odd.cpp  test_l1_set_alarm.cpp  test_multiply.cpp  test_reverse_words.cpp  test_reversed_strings.cpp  test_roman_numerals_decoder.cpp  test_square_n_sum.cpp  test_string_repeat.cpp
